--- a/exam.html
+++ b/exam.html
@@ -611,20 +611,16 @@
                 if(document.getElementById('lobbyQCount')) document.getElementById('lobbyQCount').innerText = qCount;
                 if(document.getElementById('lobbyAttempts')) document.getElementById('lobbyAttempts').innerText = att;
                 if(document.getElementById('lobbyMaxAttempts')) document.getElementById('lobbyMaxAttempts').innerText = examData.attempts || '∞';
-
+                const isPracticeMode = (urlParams.get('mode') === 'practice');
                 // 5. Kiểm tra điều kiện vào thi (Thời gian, Số lượt)
                 // 5. Kiểm tra điều kiện vào thi (Thời gian, Số lượt)
                 let ok = true, msg = "Sẵn sàng", color = "text-green-600";
                 
-                // [MỚI] Kiểm tra xem có đang ở chế độ Luyện tập từ khóa học hay không
-                const isPracticeMode = (urlParams.get('mode') === 'practice');
-
-                // Check thời gian
-                // Check thời gian
-                // Gán lại giá trị cho isPracticeMode (không dùng const vì đã khai báo ở trên)
+                // --- LOGIC CẬP NHẬT: XỬ LÝ LƯỢT LÀM VÀ THỜI GIAN ---
+                // Lưu ý: Không dùng 'const' ở đây vì biến isPracticeMode đã được khai báo phía trên
                 isPracticeMode = (urlParams.get('mode') === 'practice');
 
-                // Check thời gian
+                // 5.1 Check thời gian mở/đóng đề
                 const now = new Date();
                 if(examData.startTime && now < new Date(examData.startTime)) { 
                     ok=false; msg="Chưa đến giờ mở đề"; color="text-orange-500"; 
@@ -635,16 +631,18 @@
                     ok=false; msg="Đề thi đã đóng"; color="text-red-500"; 
                 }
 
-                // Check số lượt - [CẬP NHẬT] Nếu là Practice Mode thì bỏ qua giới hạn
+                // 5.2 Check số lượt: Chỉ chặn nếu KHÔNG PHẢI chế độ luyện tập từ khóa học
                 if(!isPracticeMode && examData.attempts > 0 && att >= examData.attempts) { 
                     ok=false; msg="Hết lượt làm bài"; color="text-red-500"; 
                 }
 
-                // Hiển thị thông tin đặc biệt nếu đang luyện tập
+                // 5.3 Cập nhật giao diện thông báo nếu đang trong chế độ luyện tập
                 if(isPracticeMode) {
-                    msg = "Chế độ luyện tập (Không giới hạn số lượt)";
+                    msg = "Chế độ luyện tập (Không giới hạn lượt làm)";
                     color = "text-blue-600";
-                    if(document.getElementById('lobbyMaxAttempts')) document.getElementById('lobbyMaxAttempts').innerText = '∞ (Luyện tập)';
+                    if(document.getElementById('lobbyMaxAttempts')) {
+                        document.getElementById('lobbyMaxAttempts').innerText = '∞ (Luyện tập)';
+                    }
                 }
 
                 
