--- a/exam.html
+++ b/exam.html
@@ -614,10 +614,13 @@
                 if(document.getElementById('lobbyMaxAttempts')) document.getElementById('lobbyMaxAttempts').innerText = examData.attempts || '∞';
 
                 // --- 5. LOGIC KIỂM TRA ĐIỀU KIỆN VÀO THI ---
+                // --- 5. LOGIC KIỂM TRA ĐIỀU KIỆN VÀO THI ---
                 let ok = true, msg = "Sẵn sàng", color = "text-green-600";
                 
-                // [FIX LỖI] Khai báo biến 1 lần duy nhất tại đây
-                const isPracticeMode = (urlParams.get('mode') === 'practice');
+                // [FIX LOGIC] Lấy tất cả giá trị 'mode' trong URL (vì có thể có cả 'course' và 'practice')
+                const modes = urlParams.getAll('mode');
+                // Nếu có cờ 'practice' HOẶC 'course' thì đều tính là chế độ luyện tập
+                const isPracticeMode = modes.includes('practice') || modes.includes('course');
 
                 // 5.1 Check thời gian mở/đóng đề
                 const now = new Date();
@@ -630,7 +633,7 @@
                     ok=false; msg="Đề thi đã đóng"; color="text-red-500"; 
                 }
 
-                // 5.2 Check số lượt: Chỉ chặn nếu KHÔNG PHẢI chế độ luyện tập từ khóa học
+                // 5.2 Check số lượt: Chỉ chặn nếu KHÔNG PHẢI chế độ luyện tập/khóa học
                 if(!isPracticeMode && examData.attempts > 0 && att >= examData.attempts) { 
                     ok=false; msg="Hết lượt làm bài"; color="text-red-500"; 
                 }
