--- a/course-player.html
+++ b/course-player.html
@@ -545,7 +545,11 @@
                         }
 
                         btnStart.onclick = () => {
-                            if(item.examId) window.location.href = `exam.html?id=${item.examId}&mode=course&courseId=${courseId}&mode=practice`;
+                            if(item.examId) {
+                                // [LOGIC MỚI] Gửi kèm điểm tối thiểu của bài học này sang Exam
+                                const passScore = item.minScore || 5; 
+                                window.location.href = `exam.html?id=${item.examId}&mode=course&courseId=${courseId}&mode=practice&coursePassScore=${passScore}`;
+                            }
                             else alert("Chưa có đề thi!");
                         };
                     }
