--- a/exam.html
+++ b/exam.html
@@ -262,7 +262,7 @@
             </div>
             <div class="space-y-3">
                 <button id="btnViewSolution" onclick="viewDetailSolutions()" class="w-full py-3 rounded-xl bg-orange-100 text-orange-600 font-bold hover:bg-orange-200 transition-colors hidden"><i class="fa-solid fa-eye mr-2"></i> Xem lời giải chi tiết</button>
-                <button onclick="window.location.href='dashboard.html'" class="w-full py-3 rounded-xl bg-blue-600 text-white font-bold hover:bg-blue-700 shadow-lg shadow-blue-200 transition-colors">Về trang chủ</button>
+                <button onclick="returnToContext()" id="btnBackContext" class="w-full py-3 rounded-xl bg-blue-600 text-white font-bold hover:bg-blue-700 shadow-lg shadow-blue-200 transition-colors">Về trang chủ</button>
             </div>
         </div>
     </div>
@@ -1096,6 +1096,31 @@
                     window.autoScaleTables(); // <--- THÊM DÒNG NÀY
                 }).catch(()=>{});
             }
+        }
+
+        // --- [CHỨC NĂNG MỚI] Quay lại đúng ngữ cảnh (Khóa học hoặc Dashboard) ---
+        window.returnToContext = () => {
+            const urlParams = new URLSearchParams(window.location.search);
+            const courseId = urlParams.get('courseId');
+            
+            // Kiểm tra xem có phải đang làm bài từ khóa học không
+            // (Kiểm tra cả tham số mode và sự tồn tại của courseId)
+            const modes = urlParams.getAll('mode');
+            const isCourseContext = modes.includes('course') || modes.includes('practice') || !!courseId;
+
+            if (isCourseContext && courseId) {
+                // Nếu từ khóa học -> Quay lại Course Player
+                window.location.href = `course-player.html?id=${courseId}`;
+            } else {
+                // Nếu làm tự do -> Về Dashboard
+                window.location.href = 'dashboard.html';
+            }
+        };
+
+        // Cập nhật text nút bấm cho hợp lý (Optional)
+        const urlParamsTest = new URLSearchParams(window.location.search);
+        if (urlParamsTest.get('courseId') && document.getElementById('btnBackContext')) {
+            document.getElementById('btnBackContext').innerText = "Quay lại bài học";
         }
 
         document.getElementById('prevBtn').onclick = () => { if(currentIndex > 0) renderQuestion(currentIndex - 1); };
