--- a/course-manager.html
+++ b/course-manager.html
@@ -1179,22 +1179,27 @@ window.toggleCollapse = (cIdx, type, lIdx = null) => {
 // --- LOGIC 3: CÀI ĐẶT VIDEO & QUIZ (THỜI GIAN & ĐIỂM SỐ) ---
 
 // 1. Cập nhật thời gian xem video
+// --- LOGIC 3: CÀI ĐẶT VIDEO & QUIZ (THỜI GIAN & ĐIỂM SỐ) ---
+
+// 1. Cập nhật thời gian xem video
 document.getElementById('videoMinTime').oninput = (e) => {
     if(activeItemIdx > -1) {
         currentCurriculum[activeChapIdx].lessons[activeLesIdx].items[activeItemIdx].minWatchTime = e.target.value;
     }
 };
 
-// 2. [MỚI] Cập nhật điểm tối thiểu cho Quiz
-// 2. [CẬP NHẬT] Hàm cập nhật chung cho cấu hình Quiz
+// 2. [FIX QUAN TRỌNG] Cập nhật cấu hình Quiz (Điểm, Lượt xem, Giá tiền)
 const updateQuizConfig = () => {
     if(activeItemIdx > -1) {
         const item = currentCurriculum[activeChapIdx].lessons[activeLesIdx].items[activeItemIdx];
         item.minScore = document.getElementById('quizMinScore').value;
-        item.viewLimit = document.getElementById('quizViewLimit').value;
+        // Lưu ý: Cần lấy đúng ID của 2 ô nhập mới
+        item.viewLimit = document.getElementById('quizViewLimit').value; 
         item.viewPrice = document.getElementById('quizViewPrice').value;
     }
 };
+
+// Gắn sự kiện oninput cho cả 3 ô nhập để khi gõ là lưu ngay vào biến tạm
 document.getElementById('quizMinScore').oninput = updateQuizConfig;
 document.getElementById('quizViewLimit').oninput = updateQuizConfig;
 document.getElementById('quizViewPrice').oninput = updateQuizConfig;
@@ -1233,10 +1238,10 @@ window.selectItem = (cIdx, lIdx, iIdx) => {
         document.getElementById('selectedExamTitle').innerText = data.examTitle || 'Chưa chọn đề';
         document.getElementById('selectedExamInfo').classList.toggle('hidden', !data.examId);
         
-        // [CẬP NHẬT] Load đầy đủ thông số Quiz
+        // [FIX QUAN TRỌNG] Load dữ liệu cũ lên ô nhập
         document.getElementById('quizMinScore').value = data.minScore !== undefined ? data.minScore : 5;
-        document.getElementById('quizViewLimit').value = data.viewLimit || ''; // Rỗng là vô hạn
-        document.getElementById('quizViewPrice').value = data.viewPrice || ''; // Rỗng là miễn phí
+        document.getElementById('quizViewLimit').value = data.viewLimit || ''; // Nếu chưa có thì để trống (Vô hạn)
+        document.getElementById('quizViewPrice').value = data.viewPrice || ''; // Nếu chưa có thì để trống (Miễn phí)
     }
 };
 
