--- a/course-manager.html
+++ b/course-manager.html
@@ -257,30 +257,50 @@
                             <div id="pdfPreviewArea" class="h-[300px] md:h-[500px] bg-gray-800 rounded-xl overflow-hidden shadow-lg hidden"><iframe id="pdfFrame" class="w-full h-full" src=""></iframe></div>
                         </div>
 
-                        <div class="mb-8 text-left grid grid-cols-1 md:grid-cols-3 gap-4">
+                        <div id="panelQuiz" class="content-panel hidden space-y-6 max-w-4xl mx-auto">
+                            <div id="selectedExamInfo" class="hidden bg-orange-50 border border-orange-200 rounded-xl p-4 flex justify-between items-center shadow-sm">
+                                <div class="flex items-center gap-3">
+                                    <div class="w-10 h-10 bg-white rounded-lg flex items-center justify-center text-orange-500 shadow-sm font-bold text-xl"><i class="fa-solid fa-file-signature"></i></div>
                                     <div>
-                                        <label class="block text-xs font-bold text-gray-500 uppercase mb-2">Điểm tối thiểu</label>
+                                        <p class="text-[10px] text-orange-600 font-bold uppercase tracking-wider">Đề thi đã chọn</p>
+                                        <h4 id="selectedExamTitle" class="font-bold text-gray-800 text-sm md:text-base line-clamp-1">Tiêu đề đề thi...</h4>
+                                    </div>
+                                </div>
+                                <button onclick="window.openExamSelector()" class="text-orange-600 hover:text-orange-800 text-xs font-bold bg-white px-3 py-1.5 rounded-lg border border-orange-200 shadow-sm">Đổi đề</button>
+                            </div>
+
+                            <div class="text-center py-8 border-2 border-dashed border-gray-300 rounded-xl hover:border-orange-500 hover:bg-orange-50 transition-all cursor-pointer bg-white group" onclick="window.openExamSelector()">
+                                <i class="fa-solid fa-folder-open text-4xl text-gray-300 mb-2 group-hover:text-orange-500 transition-colors"></i>
+                                <p class="font-bold text-gray-500 group-hover:text-orange-600">Nhấn để chọn đề thi từ Ngân hàng</p>
+                            </div>
+
+                            <div class="bg-white p-6 rounded-xl border border-gray-200 shadow-sm">
+                                <h4 class="font-bold text-gray-800 border-b border-gray-100 pb-2 mb-4 text-sm"><i class="fa-solid fa-sliders mr-2 text-orange-500"></i>Cấu hình bài tập</h4>
+                                <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
+                                    <div>
+                                        <label class="block text-xs font-bold text-gray-500 uppercase mb-2">Điểm đạt</label>
                                         <div class="relative">
-                                            <input type="number" id="quizMinScore" value="5" min="0" max="10" step="0.5" class="w-full pl-3 pr-8 py-3 border border-gray-300 rounded-xl font-bold text-gray-800 outline-none focus:border-orange-500">
-                                            <span class="absolute right-3 top-3.5 text-gray-400 text-xs font-bold">Điểm</span>
+                                            <input type="number" id="quizMinScore" value="5" min="0" max="10" step="0.5" class="w-full pl-3 pr-8 py-2.5 border border-gray-300 rounded-lg font-bold text-gray-800 outline-none focus:border-orange-500 transition-all">
+                                            <span class="absolute right-3 top-3 text-gray-400 text-xs font-bold">Điểm</span>
                                         </div>
                                     </div>
                                     <div>
                                         <label class="block text-xs font-bold text-gray-500 uppercase mb-2" title="Để trống = Vô hạn">Giới hạn xem giải</label>
                                         <div class="relative">
-                                            <input type="number" id="quizViewLimit" min="0" class="w-full pl-3 pr-8 py-3 border border-gray-300 rounded-xl font-bold text-gray-800 outline-none focus:border-orange-500" placeholder="∞">
-                                            <span class="absolute right-3 top-3.5 text-gray-400 text-xs font-bold">Lần</span>
+                                            <input type="number" id="quizViewLimit" min="0" class="w-full pl-3 pr-8 py-2.5 border border-gray-300 rounded-lg font-bold text-gray-800 outline-none focus:border-orange-500 transition-all" placeholder="∞">
+                                            <span class="absolute right-3 top-3 text-gray-400 text-xs font-bold">Lần</span>
                                         </div>
                                     </div>
                                     <div>
-                                        <label class="block text-xs font-bold text-gray-500 uppercase mb-2" title="Để trống = Miễn phí">Giá xem (QPoint)</label>
+                                        <label class="block text-xs font-bold text-gray-500 uppercase mb-2" title="Để trống = Miễn phí">Giá mở khóa</label>
                                         <div class="relative">
-                                            <input type="number" id="quizViewPrice" min="0" class="w-full pl-3 pr-8 py-3 border border-gray-300 rounded-xl font-bold text-orange-600 outline-none focus:border-orange-500" placeholder="0">
-                                            <span class="absolute right-3 top-3.5 text-gray-400 text-xs font-bold">QP</span>
+                                            <input type="number" id="quizViewPrice" min="0" class="w-full pl-3 pr-8 py-2.5 border border-gray-300 rounded-lg font-bold text-orange-600 outline-none focus:border-orange-500 transition-all" placeholder="0">
+                                            <span class="absolute right-3 top-3 text-gray-400 text-xs font-bold">QP</span>
                                         </div>
                                     </div>
                                 </div>
-                                <button onclick="window.openExamSelector()" class="px-6 py-3 bg-orange-600 text-white rounded-xl font-bold hover:bg-orange-700 shadow-lg transition-all"><i class="fa-solid fa-folder-open mr-2"></i> Chọn từ Ngân hàng đề</button>
+                            </div>
+                        </div>
                     </div>
 
                     <div class="bg-white border-t border-gray-100 p-4 flex gap-6 text-sm font-bold text-gray-600 shrink-0">
