--- a/exam.html
+++ b/exam.html
@@ -319,11 +319,39 @@
 
         async function loadLobbyData(id) {
             try {
-                const docSnap = await getDoc(doc(db, "exams", id));
-                if (!docSnap.exists()) { document.getElementById('lobbyTitle').innerText = "Đề thi không tồn tại!"; return; }
-                examData = { id: docSnap.id, ...docSnap.data() }; 
                 
-                const q = query(collection(db, "results"), where("examId","==",id), where("studentId","==",currentUser.uid));
+                const docSnap = await getDoc(doc(db, "exams", id));
+            if (!docSnap.exists()) { document.getElementById('lobbyTitle').innerText = "Đề thi không tồn tại!"; return; }
+            examData = { id: docSnap.id, ...docSnap.data() }; 
+
+            // [MÃ MỚI] GHI ĐÈ CẤU HÌNH TỪ KHÓA HỌC (NẾU CÓ)
+            const urlParamsCheck = new URLSearchParams(window.location.search);
+            const courseIdOverride = urlParamsCheck.get('courseId');
+            if (courseIdOverride) {
+                try {
+                    const cSnap = await getDoc(doc(db, "public_courses", courseIdOverride));
+                    if (cSnap.exists()) {
+                        const cData = cSnap.data();
+                        // Ưu tiên settings từ Khóa học (exam editor của khóa học)
+                        // Giả sử bạn lưu cấu hình xem lời giải trong khóa học là 'viewResultSetting'
+                        if (cData.viewResultSetting) {
+                            console.log("Override view setting:", cData.viewResultSetting);
+                            examData.showResult = cData.viewResultSetting; // Ghi đè showResult gốc
+                        }
+                        // Nếu khóa học có quy định điểm chuẩn riêng
+                        if (cData.passScore !== undefined && cData.passScore !== null) {
+                            examData.passScore = cData.passScore;
+                        }
+                        // Nếu khóa học có quy định phí xem lời giải riêng
+                        if (cData.viewFee !== undefined) {
+                            examData.feeQpoint = cData.viewFee;
+                        }
+                    }
+                } catch (e) { console.error("Lỗi tải config khóa học:", e); }
+            }
+            // [HẾT MÃ MỚI]
+            
+            const q = query(collection(db, "results"), where("examId","==",id), where("studentId","==",currentUser.uid));
                 const snap = await getDocs(q);
                 window.examHistory = [];
                 snap.forEach(d => window.examHistory.push(d.data()));
