--- a/exam.html
+++ b/exam.html
@@ -122,7 +122,33 @@
         
         @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
         .animate-fade-in { animation: fadeIn 0.5s ease-out forwards; }
-        .pb-mobile-nav { padding-bottom: 80px; }
+        
+        /* [FIX MOBILE] Tăng padding đáy và xử lý cuộn mượt */
+        .pb-mobile-nav { 
+            padding-bottom: 180px !important; /* Tăng mạnh từ 80px lên 180px để tránh bị footer che hoàn toàn */
+        }
+
+        /* Kích hoạt cuộn mượt cho vùng câu hỏi */
+        #questionArea {
+            -webkit-overflow-scrolling: touch; /* Cuộn mượt trên iPhone/iPad */
+            scroll-behavior: smooth;
+            overscroll-behavior: contain; /* Ngăn việc kéo trôi cả trang web */
+        }
+
+        /* Xử lý vùng an toàn cho iPhone đời mới (Tai thỏ/Dynamic Island) */
+        .safe-area-bottom {
+            padding-bottom: env(safe-area-inset-bottom);
+            padding-bottom: constant(safe-area-inset-bottom);
+        }
+
+        /* Đảm bảo thanh điều hướng nổi lên trên và có hiệu ứng kính mờ */
+        .fixed.bottom-0 {
+            z-index: 50 !important;
+            background: rgba(255, 255, 255, 0.95);
+            backdrop-filter: blur(8px);
+            border-top: 1px solid rgba(0,0,0,0.05);
+        }
+
         .solution-box { border-left: 4px solid #10B981; background-color: #ECFDF5; padding: 1rem; border-radius: 0.5rem; margin-top: 1rem; }
         .origin-top-left { transform-origin: top left; }
         .image-placeholder, .group.relative .absolute { display: none !important; }
