--- a/exam.html
+++ b/exam.html
@@ -1030,7 +1030,36 @@ async function loadLobbyData(id) {
                 if(uploadBtn) { uploadBtn.disabled = false; uploadBtn.innerHTML = '<i class="fa-solid fa-cloud-arrow-up"></i> Đóng dấu số trang & Nộp bài'; }
             }
         };
+        // --- HÀM HIỂN THỊ THÔNG BÁO GÓC MÀN HÌNH (TOAST) ---
+        window.showToast = (message, type = 'success') => {
+            // Tạo phần tử thông báo nếu chưa có
+            let toast = document.getElementById('toast-notification');
+            if (!toast) {
+                toast = document.createElement('div');
+                toast.id = 'toast-notification';
+                // Style cho thông báo: Nổi bật, nằm góc trên phải
+                toast.style.cssText = "position: fixed; top: 20px; right: 20px; z-index: 9999; padding: 12px 24px; border-radius: 8px; color: white; font-weight: bold; box-shadow: 0 4px 12px rgba(0,0,0,0.15); transition: transform 0.3s cubic-bezier(0.68, -0.55, 0.27, 1.55); transform: translateX(120%);";
+                document.body.appendChild(toast);
+            }
 
+            // Chọn màu dựa trên loại thông báo
+            if (type === 'error') toast.style.backgroundColor = "#EF4444"; // Đỏ
+            else if (type === 'info') toast.style.backgroundColor = "#3B82F6"; // Xanh dương
+            else toast.style.backgroundColor = "#10B981"; // Xanh lá (Success)
+
+            toast.textContent = message;
+            
+            // Hiệu ứng trượt ra
+            requestAnimationFrame(() => {
+                toast.style.transform = "translateX(0)";
+            });
+
+            // Tự động ẩn sau 3 giây
+            if (window.toastTimeout) clearTimeout(window.toastTimeout);
+            window.toastTimeout = setTimeout(() => {
+                toast.style.transform = "translateX(120%)";
+            }, 3000);
+        };
         // --- HÀM XÓA TẤT CẢ ẢNH CỦA 1 CÂU (CÓ XÓA CLOUD) ---
         window.deleteAllImages = async (qIdx) => {
             const confirmDelete = await window.customConfirm("CẢNH BÁO: Bạn có muốn xóa TOÀN BỘ ảnh của câu này không?\nHành động này sẽ xóa vĩnh viễn các file đã tải lên.");
