--- a/exam-editor.html
+++ b/exam-editor.html
@@ -1095,7 +1095,7 @@
 
         function cleanLatex(text) { if (!text) return ""; let cleaned = text.replace(/^%.*$/gm, '').replace(/(?<!\\)%.*/g, '').replace(/^\s*\[.*?\]/gm, ''); return cleaned.trim(); }
         
-        window.renderMissingImagesPanel = () => {// --- HÀM MỚI: BẢNG TRẠNG THÁI THÔNG MINH (XANH/ĐỎ) ---
+        // --- HÀM MỚI: BẢNG TRẠNG THÁI THÔNG MINH (XANH/ĐỎ) ---
         window.renderMissingImagesPanel = () => {
             const panel = document.getElementById('missingImagesPanel');
             const grid = document.getElementById('missingImagesGrid');
