--- a/exam-editor.html
+++ b/exam-editor.html
@@ -1252,11 +1252,14 @@
                         const imgTag = `<div class="flex justify-center my-1"><img src="${url}" class="rounded-lg shadow-sm" style="max-height:350px;" loading="lazy"></div>`;
                         
                         // Thay thế Marker trong nội dung câu hỏi bằng thẻ ảnh thật
-                        window.questions.forEach(q => {
-                            ['content', 'solution'].forEach(key => {
-                                if (q[key] && q[key].includes(item.id)) {
-                                    const tempDiv = document.createElement('div');
-                                    tempDiv.innerHTML = q[key];
+                        const ph = tempDiv.querySelector(`div[data-id="${item.id}"]`);
+                                    if(ph) {
+                                        ph.outerHTML = "___IMG_MARKER___";
+                                        // FIX: Dùng Regex xóa sạch thẻ <br>, \n và khoảng trắng thừa bao quanh ảnh
+                                        let newHTML = tempDiv.innerHTML;
+                                        newHTML = newHTML.replace(/(\s*<br\s*\/?>\s*|\s+)*___IMG_MARKER___(\s*<br\s*\/?>\s*|\s+)*/gi, imgTag);
+                                        q[key] = newHTML;
+                                    }
                                     const ph = tempDiv.querySelector(`div[data-id="${item.id}"]`);
                                     if(ph) {
                                         ph.outerHTML = "___IMG_MARKER___";
